# octavianTest

./: CMakeLists.txt  README.md  actionDelay.cpp  actionDelay.h  buildProject.sh  mouseSystem.cpp  mouseSystem.h  mvs17.bat  mvs19.bat
include/SOIL/x64/: soil.lib
src/: constructorWindow.cpp  constructorWindow.h  glFunctional.cpp  glFunctional.h  main.cpp  struct.h
src/actions/: actionBase.cpp  actionBase.h  actionChangeColor.cpp  actionChangeColor.h  actionDelay.cpp  actionDelay.h  actionLerp.hpp  actionLerpRotate.cpp  actionLerpRotate.h  actionRepeat.cpp  actionRepeat.h  actionRotate.cpp  actionRotate.h  actionRotateTarget.cpp  actionRotateToTarget.cpp  actionRotateToTarget.h  actionSequence.cpp  actionSequence.h
src/components/: bufferComponent.cpp  bufferComponent.h  buttonComponent.cpp  buttonComponent.h  clickComponent.cpp  clickComponent.h  colorComponent.cpp  colorComponent.h  componentBase.h  componentContainer.h  labelComponent.cpp  labelComponent.h  renderComponent.cpp  renderComponent.h  spriteComponent.cpp  spriteComponent.h  textureComponent.cpp  textureComponent.h  transformComponent.cpp  transformComponent.h
src/controllers/: bufferController.cpp  bufferController.h  textureController.cpp  textureController.h
src/entity/: entity.cpp  entity.h  scene.cpp  scene.h
src/entity/2d/: button.cpp  button.h  label.cpp  label.h  node.cpp  node.h  sprite.cpp  sprite.h
src/entity/3d/: object3d.cpp  object3d.h
src/factory/: factoryAction.cpp  factoryAction.h  factoryBuffer.cpp  factoryBuffer.h  factoryEntity.cpp  factoryEntity.h  factoryScene.cpp  factoryScene.h  factoryTexture.cpp  factoryTexture.h
src/system/: renderSystem.cpp  systemRender.cpp  systemRender.h
src/systems/: mouseSystem.cpp  renderSystem.cpp  renderSystem.h
